--- a/thinkspace-frontend/src/styles/HomePage.css
+++ b/thinkspace-frontend/src/styles/HomePage.css
@@ -1,5 +1,5 @@
 /* General Styles */
-body {
+.home {
     margin: 0;
     font-family: "Arial", sans-serif;
     background: linear-gradient(135deg, #000000, #6a0dad);
